force-app/main/default/objects/TalendSyncLog__c/TalendSyncLog__c.object-meta.xml
<CustomObject>
    <label>Talend Sync Log</label>
    <nameField>
        <label>Talend Sync Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talend Sync Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>