force-app/main/default/objects/TalendSyncLog__c/fields/AbacusInterface__c.field-meta.xml
<CustomField>
    <fullName>AbacusInterface__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abacus Interface</label>
    <referenceTo>AbacusInterface__c</referenceTo>
    <relationshipLabel>Talend Sync Logs</relationshipLabel>
    <relationshipName>TalendSyncLogs</relationshipName>
    <type>Lookup</type>
</CustomField>