force-app/main/default/objects/TalendSyncLog__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>