force-app/main/default/objects/TalendSyncLog__c/fields/FullStackTrace__c.field-meta.xml
<CustomField>
    <fullName>FullStackTrace__c</fullName>
    <label>FullStackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>