force-app/main/default/objects/TalendSyncLog__c/fields/NumberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRecords__c</fullName>
    <label>Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>