force-app/main/default/objects/TalendSyncLog__c/fields/TalendSyncNr__c.field-meta.xml
<CustomField>
    <fullName>TalendSyncNr__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Talend Sync Nr</label>
    <type>AutoNumber</type>
</CustomField>