force-app/main/default/objects/TalendSyncLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DateTime__c</columns>
    <columns>TalendSyncNr__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>NumberOfRecords__c</columns>
    <columns>FullStackTrace__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>