force-app/main/default/objects/TalendSyncLog__c/listViews/Log_AccountSupplierUpsert.listView-meta.xml
<ListView>
    <fullName>Log_AccountSupplierUpsert</fullName>
    <columns>NAME</columns>
    <columns>TalendSyncNr__c</columns>
    <columns>DateTime__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>AccountSupplierUpsert</value>
    </filters>
    <label>Log: AccountSupplierUpsert</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>