force-app/main/default/objects/TalendSyncLog__c/listViews/Log_InvoiceExport.listView-meta.xml
<ListView>
    <fullName>Log_InvoiceExport</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>TalendSyncNr__c</columns>
    <columns>DateTime__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>InvoiceExport</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>#2000: Agg_InvoiceExport</value>
    </filters>
    <label>Log: InvoiceExport</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>